--- a/CollectionViewSample.Android/CollectionViewSample.Android.csproj
+++ b/CollectionViewSample.Android/CollectionViewSample.Android.csproj
@@ -62,14 +62,17 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="ReactiveUI.Fody">
-      <Version>13.2.2</Version>
+      <Version>16.2.6</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfTabView">
+      <Version>19.3.0.46</Version>
     </PackageReference>
     <PackageReference Include="System.Text.Json">
-      <Version>5.0.1</Version>
+      <Version>5.0.2</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
-    <PackageReference Include="Xamarin.Essentials.Interfaces" Version="1.6.1" />
-    <PackageReference Include="Prism.DryIoc.Forms" Version="8.0.0.1909" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
+    <PackageReference Include="Xamarin.Essentials.Interfaces" Version="1.7.0" />
+    <PackageReference Include="Prism.DryIoc.Forms" Version="8.1.97" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainApplication.cs" />
