--- a/CollectionViewSample/CollectionViewSample.csproj
+++ b/CollectionViewSample/CollectionViewSample.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="ReactiveUI" Version="16.2.6" />
     <PackageReference Include="ReactiveUI.Fody" Version="16.2.6" />
+    <PackageReference Include="Syncfusion.Xamarin.SfPullToRefresh" Version="19.3.0.46" />
     <PackageReference Include="Syncfusion.Xamarin.SfTabView" Version="19.3.0.46" />
     <PackageReference Include="System.Text.Json" Version="5.0.2" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
